# foundation-meta

./: .gitignore  README.md  ShakeFile.hs
www/: documentation.md  features.md  foundation-web.cabal  site.hs
www/benchs/: 7.10.3-foundation-v0.0.1-116-gf21d194.csv  text.csv
www/css/: agency.min.css
www/js/: agency.js
www/resources/startbootstrap-agency-gh-pages/css/: agency.css
www/resources/startbootstrap-agency-gh-pages/less/: variables.less
www/resources/startbootstrap-agency-gh-pages/scss/: _variables.scss
www/src/: BenchGen.hs  BenchUtils.hs  CSV.hs  Generation.hs  Main.hs  Utils.hs
www/templates/: benchs.html  csv-to-js.html  default.html  features.html  main.html
