name:               foundation-web
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  other-modules:    Generation
                    CSV
                    BenchUtils
                    Utils
  hs-source-dirs:   src
  build-depends:    base
                  , hakyll
  ghc-options:      -threaded
  default-language: Haskell2010

executable bench-gen
  main-is:          BenchGen.hs
  hs-source-dirs:   src
  other-modules:    BenchUtils
                    CSV
                    Generation
                    Utils
  build-depends:    base
                  , filepath
  default-language: Haskell2010
